--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,9 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
 
+  <!-- Google Sign-In Client ID -->
+  <meta name="google-signin-client_id" content="472845013892-3uqvn4hm2183erptkjsibonhr46f7ce2.apps.googleusercontent.com">
+
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
